<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur3e_aruco_controller</name>
  <version>0.5.0</version>
  <description>Package for controlling UR3e robot with camera feed and ArUco markers</description>
  <maintainer email="maciej.obara@student.put.poznan.pl">Maciej Obara</maintainer>
  <maintainer email="aleksandra.cymer@student.put.poznan.pl">Aleksandra Cymer</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>python-opencv</depend>
  <depend>numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
